# boxes

./: BUILD.md  Cargo.toml  LICENSE  README.md
.cursor/skills/implement/: SKILL.md
.cursor/skills/implement/references/: phase-checklist.md
.github/workflows/: ci.yml
crates/boxes/: Cargo.toml
crates/boxes/src/: main.rs
crates/boxes_app/: Cargo.toml
crates/boxes_app/src/: lib.rs  sim_bridge.rs
crates/boxes_app/src/input/: mod.rs  pick.rs  selection.rs  tools.rs
crates/boxes_app/src/render/: chunk.rs  highlight.rs  materials.rs  mod.rs  surface.rs  view.rs
crates/boxes_app/src/ui/: factory.rs  format.rs  help.rs  mod.rs
crates/boxes_sim/: Cargo.toml
crates/boxes_sim/src/: cell.rs  chunk.rs  constants.rs  coord.rs  engine.rs  lib.rs  sim.rs  types.rs  world.rs
docs/: README.md
docs/planning/: game-overview.md  initial-planning.md  next-steps.md
docs/roadmap/: active.md  completed.md  future.md
docs/specs/: P0-project-foundation.md  P1-simulation-core.md  P2-cell-types.md  P3-rendering.md  P4-input-tools.md  P5-factory-ui.md  P5.1-selection-view-nav.md  P5.2-orbit-anchor-pan.md
