[package]
name = "boxes_app"
description = "Boxes Bevy application — rendering, input, and UI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bevy = { version = "0.16", default-features = true }
boxes_sim = { path = "../boxes_sim" }
